# userscripts

./: .gitignore  AGENTS.md  README.md
.codex/agents/: mota-dev-high-fast.toml  mota-dev-low-fast.toml  mota-dev-medium-fast.toml  mota-dev-xhigh-fast.toml  mota-review-high-fast.toml  mota-review-max-fast.toml  mota-review-medium-fast.toml  mota-review-xhigh-fast.toml
games/: README.md
games/mota-planning-lab/: .gitignore  READMD.md  README.md  TASK.md  userscript.config.json
games/mota-planning-lab/benchmarks/: compare_stage0.py  stage0.py
games/mota-planning-lab/docs/: blind-play-compliance.md  current-solver-architecture.md  install-and-run.md  live-runtime-authority.md  manual-labeling.md  pause-taxonomy.md  protocol.md  qa-runbook.md  solver-architecture.md  state-machine.md  storage.md  world-model.md
games/mota-planning-lab/protocol/: cycle-request.schema.json  cycle-response.schema.json  observation.schema.json
games/mota-planning-lab/service/: pyproject.toml
games/mota-planning-lab/service/data/: block-labels.json  floor-models.json
games/mota-planning-lab/service/mota_lab/: __init__.py  __main__.py  api.py  combat.py  deltas.py  engine_model.py  guards.py  knowledge.py  labels.py  logging.py  models.py  planner.py  recovery.py  search.py  state.py  storage.py  valuation.py
games/the-really-upgrade-tree-of-life/: README.md  the-really-upgrade-tree-of-life.user.js  userscript.config.json
scripts/: build-userscript.js
shared/: README.md  dom.js  large-number.js  storage.js
templates/: README.md  incremental-game.user.js
(+276 files in other folders)
