[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mota-planning-lab"
version = "0.1.0"
description = "Local blind-play decision service for the Mota Planning Lab userscript"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.8",
  "pydantic==2.12.5",
  "uvicorn==0.39.0",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[project.scripts]
mota-lab = "mota_lab.__main__:main"

[tool.setuptools]
packages = ["mota_lab"]

[tool.pytest.ini_options]
testpaths = ["../tests/python"]
addopts = "-q"
